2009-06-28  Per Bothner  <per@bothner.com>

	* CodeAttr.java (emitStore):  Don't check if var is dead - this can be
	useful for pushing parameters to a previouly compiled inlined procedure,
	followed by a jump to the procedure label - see gnu.expr.ApplyExp.

2009-04-21  Per Bothner  <per@bothner.com>

	* ObjectType.java (getContextClassLoader): Reportedly on Android
	Thread#getContextClassLoader doesn't work.

2009-04-16  Per Bothner  <per@bothner.com>

	* Type.java (errorType): New static.

2009-02-23  Per Bothner  <per@bothner.com>

	* Type.java (class ClassTypeToMap): New class.
	(mapClassToType): Change to use ClassTypeToMap instead of WeakHashMap.

2009-01-14  Per Bothner  <per@bothner.com>

	* dump.java (main): Make more bullet-proof.
	(usage): Fix typos for jar: URL syntax.

2008-12-29  Per Bothner  <per@bothner.com>

	* ClassType.java (isAccessible): New convenience method.  This also
	checks whether the member is static, in case of protected access.

2008-12-28  Per Bothner  <per@bothner.com>

	* SwitchState.java (finish): Optimize a single 'case 0'.

2008-12-27  Per Bothner  <per@bothner.com>

	Generate StackMapTable attributes.
	* ExitableBlock.java: New class.
	* Makefile.am: Update accordingly.
	* CodeAttr.java (startExitableBlock, endExitableBlock): New methods.
	* StackMapTableAttr.java (emitStackMapEntry):  Generate an entry
	for a given position in the StackMapTable attribute.  Handles
	appropriate encoding and compression.
	* SwitchState.java (typeState): Remove field - instead we remember
	the type-state in cases_label.
	(switchValuePushed): Do the popType of the switch value here.
	(addCase, addDefault): Remove methods with explicit Labels.
	(exitSwitch): New method.
	* CodeAttr.java (startSwitch): Don't do popType here.
	* UninitializedType.java (label): New field.
	(<init>): New constructor - takes label of new instruction.
	* Method.java (initCode): Call new noteParamTypes methods.